v2ex_reply.css
span#topicBTN, .replyBTN
{
    padding: 4px 7px;
    border-radius: 3px;
    border: 1px solid #a6a6a6;
    transition: all .1s;
    cursor: pointer;
}

span#topicBTN:hover, .replyBTN:hover
{
    color: #000;
    border: 1px solid #c6c6c6;
    box-shadow: 0px 0px 6px 0px #a6a6a6;
}

span.replyDetailBTN
{
    visibility: hidden;
    color: #778087;
    cursor: pointer;
}

span.replyDetailBTN:hover
{
    background-color: #f5f5f5;
}

div[id^=r_]:hover span.replyDetailBTN
{
    visibility: visible;
}

div.replyDetail
{
    display: none;
    margin: 0px;
    padding: 10px;
    shadow-box: 1px 1px 1px #000;
    color: #000;
    background-color: #eee;
    font-size: 14px;
    line-height: 1.6;
    border-bottom: 1px solid #e2e2e2;
}

div.smartMode
{
    text-align: right;
    margin-top: 6px;
}

div.smartMode span
{
    font-size: 13px;
    line-height: 13px;
    padding: 4px 7px;
    margin-right: 5px;
    border-radius: 3px;
    border: 1px solid #999;
    cursor: pointer;
}

div.smartMode span:hover
{
    box-shadow: 0px 0px 6px 0px #a6a6a6;
}

span.checked
{
    background-color: #334;
    color: #fff;
}

div.replyDetail div div
{
    text-align: left;
    display: inline-block;
    overflow:hidden;
    margin-top: 10px;
    padding: 10px 10px 2px;
    max-width: 480px;
    word-break:break-all;
    border-radius: 10px;
    background-color: #fffff9;
}

div.replyDetail div div img
{
    max-width: 400px !important;
}

p.bubbleName, p.bubbleTitle
{
    color: gray;
    margin: 2px 0px 0px;
    padding:0px 10px;
    font-size: 14px;
    line-height: 1.6;
    border-top: 1px solid #e2e2e2;
}

span.replyDetailEnd
{
    display: inline-block;
    font-size: 12px;
    margin: 12px 0px 2px;
    cursor: pointer;
}

.unrelated
{
    display: none;
}

.unrelated div
{
    opacity: 0.4;
    transition: all .8s cubic-bezier(.4,.2,.3,1);
}

.unrelated div:hover
{
    opacity: 1;
}

.unrelated .unrelatedTip:before
{
    content: "可能是无关内容";
}

div#closeReply
{
    position: absolute;
    visibility: hidden;
    top: 0;
    opacity: 0;
    box-shadow: 0px 0px 20px #8e8e8e;
    border-radius: 10px;
    padding: 10px 6px 4px;
    font-size: 14px;
    line-height: 1.6;
    word-break: break-all;
    word-wrap: break-word;
    max-width: 602px;
    background: #fff;
    transition: opacity .3s, margin .3s;
}

div#closeReply > img{
    max-width: 590px !important;
}

div#closeReply > img.triangle
{
    position: absolute;
    bottom: -6px;
    left: 74px;
}

span[class^="inputBTN"]
{
    margin-left:6px;
    cursor: pointer;
}

span[class^="inputBTN"]:hover
{
    border-bottom: 1px solid;
}

.emoticon ul
{
    margin: 0px;
}

.emoticon ul li
{
    display: inline-block;
    cursor: pointer;
    width: 22px;
    height: 22px;
    margin: 6px 3px 0px;
}

.uploadImage
{
    text-align: left;
    display: none;
    padding-top: 8px;
}

.uploadImage > div
{
    display: inline-block;
    width: 150px;
    height: 150px;
    margin: 10px 8px;
    border-radius: 10px;
    text-align: center;
    border: 2px solid #fffff9;
    background-color: #e2e2e2;
    transition: all 1s cubic-bezier(.4,.2,.3,1);
}

.uploadImage > div > div
{
    margin: 10px auto 0px;
    width: 130px;
    height: 110px;
}

.uploadImage img
{
    margin: auto;
    max-width: 130px;
    max-height: 110px;
    min-width: 80px;
    min-height: 60px;
}

.uploadImage span
{
    font-size: 12px;
    line-height: 30px;
}

#rotateImg
{
    display: none;
    position: absolute;
    width: 6.6em;
    height: 1.6;
    color: #fff;
    text-align: right;
    font-size: 14px;
    line-height: 1.6;
    background: rgba(0, 0, 0, 0.5);
}

#rotateImg span
{
    cursor: pointer;
}

